# qt_projects

./: .gitignore  README.md  candidates.csv  interviews.ods  qt_projects.sublime-workspace
csv_test/: CMakeLists.txt  main.cpp
plusminus/: CMakeLists.txt  main.cpp  plusminus  plusminus.cpp  plusminus.h
schedule/: CMakeLists.txt  main.cpp  schedule.cpp  schedule.h
